Task4/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-crud-deployment
spec:
  selector:
    matchLabels:
      app: springboot-k8s-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: springboot-k8s-mysql
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: springboot-crud-k8s
        image: manjitsinghyadav/springboot-crud-k8s:1.0
        ports:
        - containerPort: 8080
        env:   # Setting Enviornmental Variables
        - name: DB_HOST   # Setting Database host address from configMap
          valueFrom :
            configMapKeyRef :
              name : db-config
              key :  host

        - name: DB_NAME  # Setting Database name from configMap
          valueFrom :
            configMapKeyRef :
              name : db-config
              key :  dbName

        - name: DB_USERNAME  # Setting Database username from Secret
          valueFrom :
            secretKeyRef :
              name : mysql-secrets
              key :  username

        - name: DB_PASSWORD # Setting Database password from Secret
          valueFrom :
            secretKeyRef :
              name : mysql-secrets
              key :  password
