Task4/db-deployment.yaml
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    tier: database
spec:
  selector: # mysql Pod Should contain same labels
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: mysql
        tier: database
    spec:
      containers:
      - image: mysql:5.7 # image from docker-hub
        args:
        - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:        # Mounting voulume obtained from Persistent Volume Claim
        - name: mysql-vol
          mountPath: /var/lib/mysql #This is the path in the container on which the mounting will take place.
        resources:
          limits:
            cpu: 20m    
      volumes:
      - name: mysql-vol # Obtaining 'vloume' from PVC
        persistentVolumeClaim:
          claimName: mysql-pvc
---
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: mysql  # DNS name
  labels:
    app: mysql
    tier: database
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:       # mysql Pod Should contain same labels
    app: mysql
    tier: database
    #clusterIP: None  # We Use DNS, Thus ClusterIP is not relevant
